--- a/style.css
+++ b/style.css
@@ -29,10 +29,35 @@ h2 {
   font-size: 14px;
   color: #212121;
   text-decoration: none;
-  position: relative; 
-  transition-property: background-color, color ;
-  transition-duration: 1s;
+  position: relative;
+  transition-property: background-color, color;
+  transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.logo {
+  padding-top: 22px;
+  padding-right: 93px;
+  font-weight: 700;
+  font-family: "Raleway";
+  color: #2196f3;
+  font-size: 26px;
+}
+
+.logo2{
+    padding-top: 22px;
+  font-weight: 700;
+  font-family: "Raleway";
+  color: #2196f3;
+  font-size: 26px;
+}
+
+.studio-h {
+  color: #212121;
+}
+
+.studio {
+  color: white;
 }
 
 .menu-link::after {
@@ -43,13 +68,16 @@ h2 {
   position: absolute;
   bottom: -5px;
   left: 0;
-  opacity: 0;
-  
+  transform: scale(0);
+    transition-property:  transform, color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.menu-link3,.menu-link2{
-  transition-property: background-color, color ;
-  transition-duration: 1s;
+.menu-link3,
+.menu-link2 {
+  transition-property: background-color, color;
+  transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -64,14 +92,58 @@ h2 {
   position: absolute;
   bottom: -5px;
   left: 0;
-  opacity: 1;
+  transform: scale(1);
+    transition-property:  transform , color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-active::after,
-.menu-link:hover::after
-,.menu-link:hover {
-  opacity: 1;
+.menu-link:hover::after,
+.menu-link:hover {
+  transform:scale(1);
   color: #2196f3;
+}
+
+.containers {
+  display: flex;
+  justify-content: baseline;
+  max-height: 50px;
+  align-items: baseline;
+}
+
+.contacts-icon {
+  height: 17px;
+  width: 14px;
+  color: #212121;
+
+  padding-top: 5px;
+}
+
+.container-div {
+  padding-left: 344px;
+}
+
+.contacs-link {
+  gap: 5px;
+  display: flex;
+  align-items: baseline;
+  color: #212121;
+  transition-property: fill, color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacs-link:hover {
+  color: #2196f3;
+  fill: #2196f3;
+}
+
+.contacs-list {
+  max-height: 15px;
+  display: flex;
+  justify-content: baseline;
+  gap: 50px;
 }
 
 .h1 {
@@ -232,6 +304,9 @@ p {
   height: 100%;
   background-color: rgba(49, 36, 36, 0.5);
   opacity: 1;
+  transition-property: opacity;
+  transition-duration: 500ms;
+  transition-timing-function: cubic-bezier(0, 4.92, 0.45, -2.42);
 }
 
 .backdrop.is-hidden {
@@ -242,6 +317,12 @@ p {
 .no-scroll {
   overflow: hidden;
 }
+
+.backdrop.is-hidden .modal{
+    transform: translate(-200%, -50%) scale(0.25) rotate(0deg);
+    
+}
+
 
 .modal {
   box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14),
@@ -254,8 +335,17 @@ p {
   width: 528px;
   height: 581px;
   padding: 15px;
-  transform: translate(-50%, -50%);
+   transition-property:transform ;
+    transition-duration: 500ms;
+    transition-timing-function: cubic-bezier(0, -2.32, 1, 3.03);
+  transform: translate(-50%, -50%) scale(1) rotate(360deg) ;
 }
+
+
+ .modal-a{
+  display: flex;
+  justify-content: end;
+ } 
 
 .label-textarea {
   color: #757575;
@@ -303,6 +393,12 @@ p {
   right: 210px;
 }
 
+
+.form-group{
+  width: 448px;
+  margin: 0 auto;
+}
+
 .p-modal {
   position: relative;
   margin: 0 auto;
@@ -333,12 +429,10 @@ p {
 }
 
 .email {
-
   display: flex;
   color: #757575;
   flex-direction: row;
   text-decoration: none;
-  
 }
 
 .main-text {
@@ -459,6 +553,10 @@ p {
   justify-content: center;
 }
 
+.form-modal {
+  margin: 0 auto;
+}
+
 .input-checkbox {
   width: 16px;
   height: 15px;
@@ -498,6 +596,7 @@ p {
 }
 
 .foter-svgggg {
+  padding-top: 5px;
   width: 24px;
   height: 24px;
 }
@@ -567,54 +666,42 @@ p {
   justify-content: center;
 }
 
-
-.form-group{
-width: 448px;
-height: 342px;
-margin: 0 auto;
+.contact-form-lebel {
+  color: #757575;
 }
 
-.contact-form-lebel{
- color: #757575;
-}
-
-.contacs-form-wrapper{
-border: 1px solid rgba(33, 33, 33, 0.2);
-border-radius: 4px;
+.contacs-form-wrapper {
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
   width: 448px;
   height: 40px;
-    display: flex;
-    justify-content: baseline;
-    align-items: center;
-
+  display: flex;
+  justify-content: baseline;
+  align-items: center;
 }
- 
 
-.contact-form-icon{
+.contact-form-icon {
   width: 18px;
   height: 18px;
   margin: 15px;
 }
 
-.contact-form-input{
+.contact-form-input {
   height: 18px;
 }
 
-.contacs-form-wrapper-textarea{
+.contacs-form-wrapper-textarea {
   border: 1px solid rgba(33, 33, 33, 0.2);
-border-radius: 4px;
+  border-radius: 4px;
   width: 448px;
   height: 142px;
-    display: flex;
-
+  display: flex;
 }
 
+.contact-form-textarea {
+  color: rgba(117, 117, 117, 0.5);
 
-
-.contact-form-textarea{
-color: rgba(117, 117, 117, 0.5);
-
-    width: 448px;
+  width: 448px;
   height: 140px;
   padding-top: 12px;
   padding-left: 16px;
@@ -639,6 +726,11 @@ color: rgba(117, 117, 117, 0.5);
   border: none;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background: #2196f3;
+}
+
+.div-button-modal{
+  display: flex;
+  justify-content: center;
 }
 
 .input-modal-3 {
@@ -695,6 +787,10 @@ color: rgba(117, 117, 117, 0.5);
   margin: 0 auto;
 }
 
+.contract {
+  color: #2196f3;
+}
+
 .svg-footer {
   fill: white;
   width: 20px;
@@ -714,6 +810,7 @@ color: rgba(117, 117, 117, 0.5);
 }
 
 .imgggg {
+padding-right: 70px;
   width: 300px;
 }
 
@@ -764,49 +861,43 @@ color: rgba(117, 117, 117, 0.5);
 }
 
 .li-box {
-
   box-shadow: 1px 4px 6px 0 rgba(0, 0, 0, 0.16), 0 4px 4px 0 rgba(0, 0, 0, 0.06),
     0 1px 1px 0 rgba(0, 0, 0, 0.12);
   background: #fff;
 }
 
-.li-hover:hover  .h3-div{
-transform: translateX(0);
-  display: flex;
-  opacity: 1;
-  justify-content: center;
-  align-items: center;
+.li-hover:hover .h3-div {
+  transform: scale(1);
+
 }
 
+
+
 .h3-div {
-  opacity: 0;
-  display: none;
+
+
   position: absolute;
-  font-weight: 400; 
+  font-weight: 400;
   color: #fff;
   width: 370px;
-  height: 294px;
   display: flex;
+  align-items: center;
+  height: 294px;
   padding-left: 24px;
   padding-right: 24px;
   background: rgba(33, 150, 243, 0.9);
   font-size: 21px;
-transform: translateX(100%);
-transition: 0,5s transform ease-in;
+  transform: scale(0);
+    transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   margin: 0 auto;
 }
 
-
-.transform{
-    transition-property: fill, color,  background-color,   box-shadow;
+.transform {
+  transition-property: fill, color, background-color, box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-}
-
-
-.li {
-  border: 1px solid #eee;
 }
 
 .a-p22 {
@@ -862,8 +953,6 @@ transition: 0,5s transform ease-in;
 .li {
   max-width: 370px;
 }
-
-
 
 .h4-btn {
   font-weight: 500;
@@ -922,7 +1011,7 @@ transition: 0,5s transform ease-in;
 }
 
 .pd {
-  padding-left: 215px;
+  padding-left: 75px;
   display: flex;
   align-items: center;
 }
